--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -25,6 +25,16 @@ table th {
     text-transform: uppercase;
 }
 
+/* Ensure images fit within table cells */
+table td img {
+    max-width: 100px;
+    max-height: 100px;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+}
+
+
 @media screen and (max-width: 600px) {
     table {
         border: 0;
