--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,56 +1,104 @@
-<%= form_with(model: @product, local: true) do |form| %>
-  <% if @product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
-      <ul>
-        <% @product.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<div class="modal-body">
+
+  <%= form_with(model: @product, local: false) do |form| %> <!-- Submitting without refreshing the page -->
+    <% if @product.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+        <ul>
+          <% @product.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="mb-3">
+      <%= form.label :name, class: "form-label" %>
+      <%= form.text_field :name, class: "form-control", id: "name", required: true %>
     </div>
+
+    <div class="mb-3">
+      <%= form.label :content, class: "form-label" %>
+      <%= form.text_area :content, class: "form-control", id: "content" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :quantity, class: "form-label" %>
+      <%= form.number_field :quantity, class: "form-control", id: "quantity" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :price, class: "form-label" %>
+      <%= form.number_field :price, step: '0.01', class: "form-control", id: "price" %>
+    </div>
+
+    <div class="mb-3 form-check">
+      <%= form.check_box :available, class: "form-check-input", id: "available" %>
+      <%= form.label :available, class: "form-check-label" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :released_at, class: "form-label" %>
+      <%= form.datetime_select :released_at, class: "form-control", id: "released_at" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :discount, class: "form-label" %>
+      <%= form.number_field :discount, step: '0.01', class: "form-control", id: "discount" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label :image, class: "form-label" %>
+      <%= form.file_field :image, class: "form-control", id: "image" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.submit class: "btn btn-primary" %>
+    </div>
+
+    <!--    <div>-->
+      <%#= form.label :name %>
+      <%#= form.text_field :name %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.label :content %>
+      <%#= form.text_area :content %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.label :quantity %>
+      <%#= form.number_field :quantity %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.label :price %>
+      <%#= form.number_field :price, step: '0.01' %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.label :available %>
+      <%#= form.check_box :available %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.label :released_at %>
+      <%#= form.datetime_select :released_at %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.label :discount %>
+      <%#= form.number_field :discount, step: '0.01' %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.label :image %>
+      <%#= form.file_field :image %>
+<!--    </div>-->
+
+<!--    <div>-->
+      <%#= form.submit %>
+<!--    </div>-->
+
   <% end %>
-
-  <div>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :content %>
-    <%= form.text_area :content %>
-  </div>
-
-  <div>
-    <%= form.label :quantity %>
-    <%= form.number_field :quantity %>
-  </div>
-
-  <div>
-    <%= form.label :price %>
-    <%= form.number_field :price, step: '0.01' %>
-  </div>
-
-  <div>
-    <%= form.label :available %>
-    <%= form.check_box :available %>
-  </div>
-
-  <div>
-    <%= form.label :released_at %>
-    <%= form.datetime_select :released_at %>
-  </div>
-
-  <div>
-    <%= form.label :discount %>
-    <%= form.number_field :discount, step: '0.01' %>
-  </div>
-
-  <div>
-    <%= form.label :image %>
-    <%= form.text_field :image %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
