--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,26 @@
   <div class="container"><br><br>
 
     <!-- Add Button -->
-    <%= link_to 'New Product', new_product_path, class: 'btn btn-primary', role: 'button' %> <br><br>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newProductModal">
+      New Product
+    </button>
+    <%#= link_to 'New Product', '#', class: 'btn btn-primary', data: { toggle: 'modal', target: '#productModal' } %>
+    <!--    <%#= link_to 'New Product', new_product_path, class: 'btn btn-primary', role: 'button' %> <br><br>-->
+
+    <!-- Modal -->
+    <div class="modal fade" id="newProductModal" tabindex="-1" aria-labelledby="newProductModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="newProductModalLabel">New Product</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <%= render 'form', product: @product %>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <table>
@@ -44,7 +63,8 @@
           <td><%= product.available ? 'Yes' : 'No' %></td>
           <td><%= product.released_at %></td>
           <td><%= product.discount %></td>
-          <td><%= image_tag product.image if product.image.present? %></td>
+          <td><%= image_tag product.image if product.image.attached? %></td>
+          <!--          <td><%#= image_tag product.image if product.image.present? %></td>-->
           <td><%= link_to 'Show', product %></td>
           <td><%= link_to 'Edit', edit_product_path(product) %></td>
           <td><%= button_to 'Delete', product_path(product), method: :delete %> </td>
@@ -58,6 +78,14 @@
   </div> <!-- END OF CONTAINER OF TABLE -->
 
 </div> <!-- END OF CONTAINER FLUID OF TABLE -->
+
+
+
+
+
+
+
+
 
 
 <!--  <h1>Listing Products</h1>-->
