--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,7 +35,8 @@
 
 <p>
   <strong>Image:</strong>
-  <%= image_tag @product.image if @product.image.present? %>
+  <%= image_tag @product.image if @product.image.attached? %>
+  <%#= image_tag @product.image if @product.image.present? %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
